nxfilter-traefik.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nxfilter
  annotations:
    kubernetes.io/ingress.class: "traefik"

spec:
  rules:
  - host: k3s-nxfilter.example.org
    http:
      paths:
      - path: /
        backend:
          serviceName: nxfilter
          servicePort: nxfilter-http
